2005-02-28  Murray Cumming  <murrayc@murrayc.com>

	* releasenotes.xml: Revive the known issues section and start it with 
	the mozilla focus problem.

2005-02-28  Murray Cumming  <murrayc@murrayc.com>

	* rnutilities: Remove gnome-search section because the mentioned 
	feature does not exist - it is just a bug fix that, if explained, 
	would just highlight that file searching is not that great in GNOME.

2005-02-28  Murray Cumming  <murrayc@murrayc.com>

	* Makfile.am: Add rnutilities to the target dependency.
	* rnutilities: Add more gedit changes described y PaoloMaggi in the 
	wiki.

2005-02-28  Murray Cumming  <murrayc@murrayc.com>

	* rnapplets.xml: Rewrote removed applets section.
	* Some other small fixes suggested by Frank Arnold.

2005-02-23  Danilo Šegan  <dsegan@gmx.net>

	* po/*: Added simple translation infrastructure.

2005-02-22  Murray Cumming  <murrayc@murrayc.com>

	* releasenotes.xml: Use live.gnome.org/JoinGnome instead of the 
	other pages, as suggested by Elijah, because this one is more up 
	to date.

2005-02-22  Murray Cumming  <murrayc@murrayc.com>

	* Fixed some broken docbook tags.

2005-02-22  Murray Cumming  <murrayc@murrayc.com>

	* rnapplications.xml: Added evolution stuff, based on an 
	announcement email.

2005-02-22  Murray Cumming  <murrayc@murrayc.com>

	* Added rngames.xml.
	* rndesktop.xml: Included rngames.xml.

2005-02-22  Murray Cumming  <murrayc@murrayc.com>

	* rndesktop.xml: Mention metacity focus-stealing prevention.
	* rnapplets.xml: Mention new Places and Desktop menus, replacing 
	Actions, and mention freedesktop menu spec.
	* rninstallation.xml: Remove the build order, because it is never 
	quite correct, and its far from enough information to build it, and 
	even if it was people would still have unique problems. Pointed 
	people to garnome and jhbuild instead. The LiveCD gets first mention, 
	of course.

2005-02-21  Murray Cumming  <murrayc@murrayc.com>
